force-app/main/default/objects/RS_Search_and_Authentication__mdt/RS_Search_and_Authentication__mdt.object-meta.xml
<CustomObject>
    <label>RS Search and Authentication</label>
    <pluralLabel>RS Search and Authentications</pluralLabel>
</CustomObject>