force-app/main/default/objects/RS_Search_and_Authentication__mdt/fields/customer_account_number__c.field-meta.xml
<CustomField>
    <fullName>customer_account_number__c</fullName>
    <label>customer account number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>