force-app/main/default/objects/RS_Search_and_Authentication__mdt/fields/Customer_DOB_field__c.field-meta.xml
<CustomField>
    <fullName>Customer_DOB_field__c</fullName>
    <label>Customer DOB field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>