force-app/main/default/objects/RS_Search_and_Authentication__mdt/fields/customer_Identified_field_name__c.field-meta.xml
<CustomField>
    <fullName>customer_Identified_field_name__c</fullName>
    <label>customer Identified field name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>