force-app/main/default/objects/RS_Search_and_Authentication__mdt/fields/Customer_Verified_field_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verified_field_name__c</fullName>
    <label>Customer Verified field name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>