force-app/main/default/objects/RS_Search_and_Authentication__mdt/fields/Fields_to_Update__c.field-meta.xml
<CustomField>
    <fullName>Fields_to_Update__c</fullName>
    <label>Fields to Update</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>