force-app/main/default/objects/RS_Search_and_Authentication__mdt/fields/Object_API_name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_name__c</fullName>
    <label>Object API name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>