force-app/main/default/objects/RS_Search_and_Authentication__mdt/fields/Object_Code__c.field-meta.xml
<CustomField>
    <fullName>Object_Code__c</fullName>
    <label>Object Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>